add a longrun with allsky radiation

--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -66,6 +66,12 @@ steps:
         agents:
           slurm_cpus_per_task: 8
 
+      - label: ":computer: aquaplanet (ρe_tot) equilmoist allsky radiation"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --vert_diff true --moist equil --rad allskywithclear --microphy 0M --viscous_sponge true --kappa_2_sponge 1e7 --dt 200secs --t_end 500days --fps 30 --job_id longrun_aquaplanet_rhoe_equil_allsky --dt_save_to_sol 6hours --dt_save_to_disk 10days"
+        artifact_paths: "longrun_aquaplanet_rhoe_equil_allsky/*"
+        agents:
+          slurm_cpus_per_task: 8
+
       - label: ":computer: held suarez (ρe_int)"
         command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --energy_name rhoe_int --t_end 1200days --fps 30 --job_id longrun_hs_rhoeint --dt_save_to_sol 6hours --dt_save_to_disk 10days"
         artifact_paths: "longrun_hs_rhoeint/*"
