--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -13,6 +13,7 @@ ClimaCorePlots = "cf7c7e5a-b407-4c48-9047-11a94a308626"
 ClimaCoreTempestRemap = "d934ef94-cdd4-4710-83d6-720549644b70"
 ClimaCoreVTK = "c8b6d40d-e815-466f-95ae-c48aefa668fa"
 CloudMicrophysics = "6a9e3e04-43cd-43ba-94b9-e8782df3c71b"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
@@ -70,6 +71,7 @@ CLIMAParameters = "0.4, 0.5, 0.6"
 ClimaCore = "0.10"
 CloudMicrophysics = "0.5"
 Dierckx = "0.5"
+DiffEqBase = "~6.84.0"
 Distributions = "0.25"
 DocStringExtensions = "0.8"
 FastGaussQuadrature = "0.4"
@@ -81,7 +83,6 @@ NCDatasets = "0.11, 0.12"
 OperatorFlux = "0.1"
 OrderedCollections = "1.4"
 OrdinaryDiffEq = "5.64.0"
-DiffEqBase = "~6.84.0"
 PoissonRandom = "0.4"
 PrettyTables = "1.3"
 RootSolvers = "0.2, 0.3"
