--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 name = "ClimaAtmos"
 uuid = "b2c96348-7fb7-4fe0-8da9-78d88439e717"
+authors = ["Climate Modeling Alliance"]
 version = "0.1.0"
 
 [deps]
