--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -102,7 +102,7 @@ QuadGK = "2.4"
 RRTMGP = "0.3"
 ReportMetrics = "0.2"
 RootSolvers = "0.2, 0.3"
-SciMLBase = "1.30"
+SciMLBase = "~1.38.3"
 StaticArrays = "1.4"
 StatsBase = "0.33"
 StochasticDiffEq = "6.42"
