--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -86,7 +86,7 @@ OrdinaryDiffEq = "5.64.0"
 PoissonRandom = "0.4"
 PrettyTables = "1.3"
 RootSolvers = "0.2, 0.3"
-SciMLBase = "1.30"
+SciMLBase = "~1.38.3"
 StaticArrays = "1.4"
 StatsBase = "0.33"
 StochasticDiffEq = "6.42"
