--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ CLIMAParameters = "0.4, 0.5, 0.6"
 ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
-CloudMicrophysics = "0.5"
+CloudMicrophysics = "0.5, 0.6"
 DiffEqCallbacks = "2.22"
 IntervalSets = "0.5, 0.6"
 JLD2 = "0.4"
