--- a/Project.toml
+++ b/Project.toml
@@ -32,7 +32,7 @@ IntervalSets = "0.5, 0.6"
 JLD2 = "0.4"
 OrdinaryDiffEq = "5.64.0"
 StaticArrays = "1.4"
-Thermodynamics = "0.8"
+Thermodynamics = "0.8, 0.9"
 UnPack = "1"
 
 [extras]
