Use new way of handling clima parameters

--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -6,6 +6,7 @@ BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
 CLIMAParameters = "6eacf6c3-8458-43b9-ae03-caf5306d3d53"
 ChromeProfileFormat = "b19f0eae-10f4-4ff0-9df2-b48cd85f6b2e"
+ClimaAtmos = "b2c96348-7fb7-4fe0-8da9-78d88439e717"
 ClimaComms = "3a4d1b5c-c61d-41fd-a00a-5873ba7a1b0d"
 ClimaCommsMPI = "5f86816e-8b66-43b2-912e-75384f99de49"
 ClimaCore = "d414da3d-4745-48bb-8d80-42e94e092884"
@@ -26,6 +27,7 @@ FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
+Insolation = "e98cc03f-d57e-4e3c-b70c-8d51efe9e0d8"
 IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
@@ -69,7 +71,7 @@ ArtifactWrappers = "0.1"
 AtmosphericProfilesLibrary = "0.1"
 CLIMAParameters = "0.4, 0.5, 0.6"
 ClimaCore = "0.10"
-CloudMicrophysics = "0.5"
+CloudMicrophysics = "0.6"
 Dierckx = "0.5"
 DiffEqBase = "~6.84.0"
 Distributions = "0.25"
@@ -85,17 +87,17 @@ OrderedCollections = "1.4"
 OrdinaryDiffEq = "5.64.0"
 PoissonRandom = "0.4"
 PrettyTables = "1.3"
+RRTMGP = "0.4"
 RootSolvers = "0.2, 0.3"
 SciMLBase = "~1.38.3"
 StaticArrays = "1.4"
 StatsBase = "0.33"
 StochasticDiffEq = "6.42"
-SurfaceFluxes = "0.3"
+SurfaceFluxes = "0.4"
 TerminalLoggers = "0.1"
-Thermodynamics = "0.8"
-TurbulenceConvection = "0.32"
+Thermodynamics = "0.9"
 UnPack = "1"
-julia = "1.5"
+julia = "1.7"
 
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
