--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -4,6 +4,7 @@ ArtifactWrappers = "a14bc488-3040-4b00-9dc1-f6467924858a"
 AtmosphericProfilesLibrary = "86bc3604-9858-485a-bdbe-831ec50de11d"
 BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
 CLIMAParameters = "6eacf6c3-8458-43b9-ae03-caf5306d3d53"
+ClimaAtmos = "b2c96348-7fb7-4fe0-8da9-78d88439e717"
 ClimaComms = "3a4d1b5c-c61d-41fd-a00a-5873ba7a1b0d"
 ClimaCommsMPI = "5f86816e-8b66-43b2-912e-75384f99de49"
 ClimaCore = "d414da3d-4745-48bb-8d80-42e94e092884"
@@ -72,7 +73,7 @@ ClimaCommsMPI = "0.3"
 ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
-CloudMicrophysics = "0.5"
+CloudMicrophysics = "0.6"
 Dierckx = "0.5"
 DiffEqBase = "~6.84.0"
 DiffEqCallbacks = "2.22"
@@ -84,7 +85,7 @@ FastGaussQuadrature = "0.4"
 Flux = "0.12"
 ForwardDiff = "0.10"
 Glob = "1.3"
-Insolation = "0.2"
+Insolation = "0.3"
 IntervalSets = "0.5, 0.6"
 JLD2 = "0.4"
 JSON = "0.21"
@@ -99,19 +100,19 @@ PoissonRandom = "0.4"
 PrettyTables = "1.3"
 ProgressLogging = "0.1"
 QuadGK = "2.4"
-RRTMGP = "0.3"
+RRTMGP = "0.4"
 ReportMetrics = "0.2"
 RootSolvers = "0.2, 0.3"
 SciMLBase = "~1.38.3"
 StaticArrays = "1.4"
 StatsBase = "0.33"
 StochasticDiffEq = "6.42"
-SurfaceFluxes = "0.3"
+SurfaceFluxes = "0.4"
 TerminalLoggers = "0.1"
-Thermodynamics = "0.8"
-TurbulenceConvection = "0.32"
+Thermodynamics = "0.9"
+TurbulenceConvection = "0.33"
 UnPack = "1"
-julia = "1.5"
+julia = "1.7"
 
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
