CompatHelper: add new compat entry for Insolation at version 0.3, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
 CloudMicrophysics = "0.6"
 DiffEqCallbacks = "2.22"
+Insolation = "0.3"
 IntervalSets = "0.5, 0.6"
 JLD2 = "0.4"
 OrdinaryDiffEq = "5.64.0"
