--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -118,10 +118,21 @@ steps:
         agents:
           slurm_cpus_per_task: 8
       
-      - label: ":computer: held suarez (ρe_tot) third order dt400"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --upwinding third_order --dt 400secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe_third_dt400 --dt_save_to_sol 6hours --dt_save_to_disk 10days"
-        artifact_paths: "longrun_hs_rhoe_third_dt400/*"
+      - label: ":computer: held suarez (ρe_tot) third order dt350"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --upwinding third_order --dt 350secs --t_end 1200days --fps 30 --job_id longrun_hs_rhoe_third_dt350 --dt_save_to_sol 6hours --dt_save_to_disk 10days"
+        artifact_paths: "longrun_hs_rhoe_third_dt350/*"
         agents:
           slurm_cpus_per_task: 8
 
+      - label: ":computer: held suarez (ρe_tot) uniform"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --dz_bottom 3000 --dz_top 3000 --t_end 1200days --fps 30 --job_id longrun_hs_rhoe_uniform --dt_save_to_sol 6hours --dt_save_to_disk 10days"
+        artifact_paths: "longrun_hs_rhoe_uniform/*"
+        agents:
+          slurm_cpus_per_task: 8
+
+      - label: ":computer: held suarez (ρe_tot) uniform third order"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --dz_bottom 3000 --dz_top 3000 --upwinding third_order --dt 400secs --t_end 1200days --fps 30 --job_id longrun_hs_rhoe_uniform_third --dt_save_to_sol 6hours --dt_save_to_disk 10days"
+        artifact_paths: "longrun_hs_rhoe_third_uniform/*"
+        agents:
+          slurm_cpus_per_task: 8
 
