Add JET script to perf folder

--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -29,6 +29,7 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 Insolation = "e98cc03f-d57e-4e3c-b70c-8d51efe9e0d8"
 IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
+JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LambertW = "984bce1d-4616-540c-a9ee-88d1112d94c9"
