--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -223,6 +223,10 @@ steps:
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --moist equil --turbconv edmf --turbconv_case Bomex --split_ode false --ode_algo Euler --dt_save_to_sol 5mins --z_elem 60 --z_stretch false --z_max 3e3 --job_id edmf_bomex --dt 6secs --t_end 6hours --regression_test true"
         artifact_paths: "edmf_bomex/*"
 
+      - label: ":computer: Single column EDMF Bomex compressible"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --moist equil --turbconv edmf --turbconv_case Bomex --split_ode true --ode_algo Euler --dt_save_to_sol 5mins --z_elem 60 --z_stretch false --z_max 3e3 --job_id edmf_bomex_compressible --dt 6secs --t_end 6hours --regression_test true --dft_remaining_tend true"
+        artifact_paths: "edmf_bomex_compressible/*"
+
       - label: ":computer: Single column EDMF DYCOMS_RF01"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --moist equil --turbconv edmf --turbconv_case DYCOMS_RF01 --split_ode false --ode_algo Euler --dt_save_to_sol 5mins --z_elem 30 --z_stretch false --z_max 1500 --job_id edmf_dycoms_rf01 --dt 6secs --t_end 4hours --regression_test true"
         artifact_paths: "edmf_dycoms_rf01/*"
