--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -110,7 +110,7 @@ steps:
       - label: ":computer: single column radiative equilibrium clearsky"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --rad clearsky --idealized_h2o true --hyperdiff false --config column --z_max 70e3 --z_elem 70 --dz_bottom 100 --dz_top 10000 --t_end 654days --dt 3hours --dt_save_to_sol 30hours --job_id sphere_single_column_radiative_equilibrium_clearsky"
         artifact_paths: "sphere_single_column_radiative_equilibrium_clearsky/*"
-      
+
       - label: ":computer: single column radiative equilibrium clearsky varying insolation"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --rad clearsky --idealized_insolation false --idealized_h2o true --hyperdiff false --config column --z_max 70e3 --z_elem 70 --dz_bottom 100 --dz_top 10000 --t_end 654days --dt 3hours --dt_save_to_sol 30hours --job_id sphere_single_column_radiative_equilibrium_clearsky_insolation"
         artifact_paths: "sphere_single_column_radiative_equilibrium_clearsky_insolation/*"
@@ -164,7 +164,7 @@ steps:
       - label: ":computer: held suarez (ρe_tot) equilmoist hightop"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --z_max 45e3 --z_elem 25 --vert_diff true --moist equil --forcing held_suarez --microphy 0M --job_id sphere_held_suarez_rhoe_equilmoist_hightop --dt 200secs --t_end 1days"
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_hightop/*"
-      
+
       - label: ":computer: held suarez (ρe) equilmoist hightop sponge"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --z_max 45e3 --z_elem 25 --vert_diff true --moist equil --forcing held_suarez --microphy 0M --rayleigh_sponge true --viscous_sponge true --zd_rayleigh 30e3 --zd_viscous 30e3 --job_id sphere_held_suarez_rhoe_equilmoist_hightop_sponge --dt 200secs --t_end 1days"
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_hightop_sponge/*"
@@ -172,10 +172,17 @@ steps:
       - label: ":computer: held suarez (ρe_int) equilmoist"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --energy_name rhoe_int --forcing held_suarez --moist equil --microphy 0M --job_id sphere_held_suarez_rhoe_int_equilmoist --regression_test true --dt 200secs --t_end 5days"
         artifact_paths: "sphere_held_suarez_rhoe_int_equilmoist/*"
-      
+
       - label: ":computer: aquaplanet (ρe_tot) equilmoist allsky radiation"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --moist equil --rad allskywithclear --microphy 0M --job_id sphere_aquaplanet_rhoe_equilmoist_allsky --dt 150secs --t_end 3.75days"
         artifact_paths: "sphere_aquaplanet_rhoe_equilmoist_allsky/*"
+
+  - group: "Configs"
+    steps:
+
+      - label: ":computer: Test IO"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --t_end 2hours --job_id test_io --dt_save_to_sol 1hours --dt_save_to_disk 1hours --post_process false"
+        artifact_paths: "test_io/*"
 
   - group: "Milestones"
     steps:
